# uitestingplayground_with_selenium_advanced

./: .env.local  .gitignore  config.py  pyproject.toml
project_tests/selenium_advanced/: __init__.py  _browser.py  browser_management.py  entities.py  management.py  wait.py
project_tests/utils/: path.py  selector.py
tests/: conftest.py  test_uitestingplayground.py
